Add Rust engine

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "build-rust": "cd engine/rust && wasm-pack build"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.5",
